--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "homepage": "https://bitbucket.org/fpolania/novanet_site#readme",
   "devDependencies": {
     "browser-sync": "^2.26.5",
+    "del": "^5.1.0",
     "eslint": "^5.16.0",
     "eslint-config-airbnb-base": "^13.0.0",
     "eslint-config-standard": "^11.0.0",
@@ -26,7 +27,10 @@
     "eslint-plugin-node": "^6.0.1",
     "eslint-plugin-promise": "^3.8.0",
     "eslint-plugin-standard": "^3.1.0",
-    "gulp": "^4.0.2"
+    "gulp": "^4.0.2",
+    "gulp-clean-css": "^3.10.0",
+    "gulp-minify": "^3.1.0",
+    "gulp-zip": "^5.0.1"
   },
   "dependencies": {
     "babel-core": "^6.26.3",
@@ -34,7 +38,6 @@
     "cryptiles": ">=4.1.2",
     "gulp-autoprefixer": "^5.0.0",
     "gulp-babel": "^7.0.1",
-    "gulp-clean-css": "^3.9.4",
     "gulp-concat": "^2.6.1",
     "gulp-eslint": "^5.0.0",
     "gulp-gzip": "^1.4.2",
@@ -42,7 +45,6 @@
     "gulp-order": "^1.2.0",
     "gulp-sass": "^4.0.1",
     "gulp-sourcemaps": "^2.6.4",
-    "gulp-uglify": "^3.0.0",
     "handlebars": "^4.1.2",
     "hoek": ">=4.2.1",
     "lodash": ">=4.17.5",
